gemas de capistrano, debugger y foundation

--- a/grabados/Gemfile
+++ b/grabados/Gemfile
@@ -32,6 +32,14 @@ group :doc do
   gem 'sdoc', require: false
 end
 
+# Deploy with Capistrano
+gem 'capistrano'
+gem 'rvm-capistrano'
+gem 'capistrano-ext'
+
+gem 'foundation-rails'
+
+gem 'debugger'
 # Use ActiveModel has_secure_password
 # gem 'bcrypt-ruby', '~> 3.1.2'
 
